# Agentic_aws

./: .gitignore  README.md  aws-nx-plugin.config.mts  nx.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  tsconfig.json
docs/: ONBOARDING.md  README.md
docs-vi/: README.md
docs-vi/components/: api-handlers.md  clevertap-agent.md  databricks-agent.md  infrastructure.md  marketing-agent.md  mcp-servers.md  session-persistence.md  shared-agent-utilities.md  talonone-agent.md  web-ui.md
docs-vi/sequence-diagrams/: sequence-chat-flow.txt  sequence-orchestrated-workflow.txt  sequence-step1-audience.txt  sequence-step2-campaign.txt  sequence-step3-promotion.txt
docs/components/: agentic-ai-build-guide.md  clevertap-agent.md  databricks-agent.md  talonone-agent.md
