[project]
name = "nx-workspace"
version = "1.0.0"
dependencies = [ "play_c463_z26_rzy_mar_tech.marketer" ]

[tool.uv.workspace]
members = [ "packages/marketer" ]

[tool.uv.sources."play_c463_z26_rzy_mar_tech.marketer"]
workspace = true

[dependency-groups]
dev = [
  "ruff>=0.8.2",
  "autopep8>=2.3.1",
  "pytest>=8.3.4",
  "pytest-sugar>=1.0.0",
  "pytest-cov>=6.0.0",
  "pytest-html>=4.1.1"
]
